<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_char_builder"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/char_builder" />

        <item
            android:id="@+id/nav_my_builds"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_builds" />

        <item
            android:id="@+id/nav_browse_builds"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/browse_builds" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/favorites" />
    </group>

    <item android:title="@string/connect">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
