<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <GridLayout
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:rowCount="1"
        android:columnCount="3" >


        <Button
            android:id="@+id/subtract_button"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:layout_column="0"
            android:textSize="30sp"
            android:background="@color/colorPrimaryLight"
            android:textColor="@color/colorLight">
        </Button>

        <TextView
            android:id="@+id/button_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/zero">
        </TextView>

        <Button
            android:id="@+id/add_button"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:textSize="30sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorLight"
            android:text="@string/add">
        </Button>
    </GridLayout>

</RelativeLayout>